[FIX] compodoc now only throws one error and documentation is available again although compodoc merely supports angular 7.x

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "compodoc": ".node_modules/.bin/compodoc -p tsconfig.app.json -w -s"
+    "compodoc": "npx compodoc -p tsconfig.json -w -s"
   },
   "private": true,
   "dependencies": {
