--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,11 +5,13 @@
     "outDir": "./out-tsc/app",
     "types": []
   },
-  "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
-  ],
+  //  "files": [
+  //    "src/main.ts",
+  //    "src/polyfills.ts"
+  //  ],
   "include": [
+    "src/main.ts",
+    "src/polyfills.ts",
     "src/**/*.d.ts"
   ]
 }
