--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
   To learn more about this file see: https://angular.io/config/solution-tsconfig.
 */
 {
-  "files": [],
+  //  "files": [],
   "references": [
     {
       "path": "./tsconfig.app.json"
@@ -16,5 +16,5 @@
     {
       "path": "./e2e/tsconfig.json"
     }
-]
+  ]
 }
