--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -7,11 +7,13 @@
       "jasmine"
     ]
   },
-  "files": [
-    "src/test.ts",
-    "src/polyfills.ts"
-  ],
+  //  "files": [
+  //    "src/test.ts",
+  //    "src/polyfills.ts"
+  //  ],
   "include": [
+    "src/test.ts",
+    "src/polyfills.ts",
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
   ]
