--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
     "cytoscape": "^3.15.1",
     "jquery": "^3.5.1",
+    "ng2-charts": "^2.3.2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
@@ -43,6 +45,7 @@
     "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
     "@compodoc/compodoc": "^1.1.11",
+    "@types/chart.js": "^2.9.23",
     "@types/cytoscape": "^3.14.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
