--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "cytoscape": "^3.15.1",
+    "cytoscape-cx2js": "^0.6.6",
     "jquery": "^3.5.1",
     "ng2-charts": "^2.3.2",
     "popper.js": "^1.16.1",
