--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^4.5.0",
+    "canvas2svg": "^1.0.16",
     "chart.js": "^2.9.3",
     "cytoscape": "^3.15.1",
     "cytoscape-cx2js": "^0.6.6",
+    "cytoscape-svg": "^0.3.1",
     "jquery": "^3.5.1",
     "ng2-charts": "^2.3.2",
     "popper.js": "^1.16.1",
