--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,7 @@
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/cytoscape/dist/cytoscape.min.js",
-              "node_modules/cytoscape-svg/cytoscape-svg.js"
+              "node_modules/cytoscape-svg/cytoscape-svg.js",
             ]
           },
           "configurations": {
