--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "compodoc": "npx compodoc -p tsconfig.json"
+    "compodoc": "npx compodoc -p tsconfig.json",
+    "ghPages": "ng build --prod --base-href /NDExEdit/"
   },
   "private": true,
   "dependencies": {
