--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ndex-edit",
   "version": "0.0.0",
   "scripts": {
+    "gh": "ng build --prod --output-path docs --base-href /NDExEdit/",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
